# spack-rs

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
handles/: Cargo.toml
handles/src/: lib.rs
hyperscan/: Cargo.toml  README.md  build.rs
hyperscan/src/: alloc.rs  bindings.rs  database.rs  error.rs  expression.rs  flags.rs  handle.rs  hs.h  lib.rs  matchers.rs  sources.rs  state.rs  stream.rs
hyperscan/sys/: Cargo.toml  README.md  build.rs
hyperscan/sys/src/: hs_stub.rs
libpexl/: Cargo.toml  LICENSE  README.md  build.rs
libpexl/src/: lib.rs
libpexl/sys/: Cargo.toml  README.md  build.rs
libpexl/sys/local-repo/: repo.yaml
libpexl/sys/src/: bindings.rs  lib.rs  pexl.h  pexl_stub.rs
re2/: Cargo.toml  README.md  build.rs
re2/abseil/: Cargo.toml  README.md  build.rs
re2/abseil/src/: abseil.hpp  bindings.rs  lib.rs
re2/src/: bindings.rs  c-bindings.cpp  c-bindings.hpp  error.rs  filtered.rs  group.rs  lib.rs  options.rs  re2.hpp  set.rs  string.rs
re2/sys/: Cargo.toml  README.md  build.rs
re2/sys/local-repo/: repo.yaml
re2/sys/src/: bindings.rs  c-bindings.cpp  c-bindings.hpp  lib.rs  re2.hpp  re2_stub.rs
src/: commands.rs  compiler-find.py  invocation.rs  lib.rs  lock.rs  metadata_spec.rs  subprocess.rs  summoning.rs  utils.rs  wasm.rs
super-process/: Cargo.toml  README.md
super-process/src/: lib.rs
vectorscan/: Cargo.toml  README.md  build.rs
vectorscan/src/: alloc.rs  database.rs  error.rs  expression.rs  flags.rs  lib.rs  matchers.rs  sources.rs  state.rs  stream.rs
vectorscan/sys/: Cargo.toml  README.md  build.rs
vectorscan/sys/local-repo/: repo.yaml
vectorscan/sys/src/: hs.h  hs_stub.rs  lib.rs
