[workspace]
members                 = [
    ".",
    "re2",
    "re2/sys",
    "super-process",
]
default-members         = [
    ".",
    "re2",
    "re2/sys",
    "super-process",
]
resolver                = "2"

[workspace.package]
edition                 = "2021"
repository              = "https://github.com/cosmicexplorer/spack-rs"
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]

[workspace.dependencies]
re2                     = { path = "re2" }
spack                   = { path = "." }
super-process           = { path = "super-process" }

displaydoc              = "0.2.4"
thiserror               = "1.0.30"
tokio                   = "1.33.0"

[package]
name                    = "spack"
description             = "Summon spack from rust build scripts!"
version                 = "0.0.0"
edition.workspace       = true
license                 = "(Apache-2.0 OR MIT)"
repository.workspace    = true
authors.workspace       = true

[dependencies]
async-stream            = "0.3.3"
async-trait             = "0.1.41"
displaydoc.workspace    = true
flate2                  = "1.0"
fslock                  = "0.2.1"
futures-core            = "0.3.15"
futures-lite            = "1"
futures-util            = "0.3.15"
hex                     = "0.4.3"
hex-literal             = "0.3.4"
indexmap                = "1.8.1"
lazy_static             = "1.4.0"
once_cell               = "1"
parking_lot             = "0.12.1"
regex                   = "1"
reqwest                 = "0.11.10"
serde                   = { version = "1.0.136", features = ["derive"] }
serde_json              = "1.0.79"
serde_yaml              = "0.8.23"
sha2                    = "0.10.2"
shlex                   = "1.1.0"
super-process.workspace = true
tar                     = "0.4"
tempfile                = "3.3.0"
thiserror.workspace     = true
tokio                   = { workspace = true, features = ["fs"] }
walkdir                 = "2"

[dev-dependencies]
tempdir                 = "0.3.7"
tokio-test              = "0.4.2"
tokio                   = { version = "1", features = ["full"] }
