[workspace]
members                 = [
    ".",
    "re2",
    "hyperscan",
    "super-process",
]
default-members         = [
    ".",
    "re2",
    "hyperscan",
    "super-process",
]
resolver                = "2"

[workspace.package]
edition                 = "2021"
repository              = "https://github.com/cosmicexplorer/spack-rs"
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]

[workspace.dependencies]
hyperscan               = { path = "hyperscan" }
re2                     = { path = "re2" }
spack                   = { path = ".", version = "0.0.1", package = "spack-rs" }
super-process           = { path = "super-process", version = "0.0.0" }

async-stream            = "0.3.3"
async-trait             = "0.1.41"
bindgen                 = "0.69.1"
displaydoc              = "0.2.4"
eyre                    = "0.6.8"
futures                 = "0.3.15"
futures-core            = "0.3.15"
futures-lite            = "1"
futures-util            = "0.3.15"
indexmap                = "1.8.1"
libc                    = "0.2.150"
num_enum                = "0.6.1"
once_cell               = "1"
parking_lot             = "0.12.1"
static_assertions       = "1.1.0"
tempfile                = "3.3.0"
thiserror               = "1.0.30"
tokio                   = "1.33.0"
tokio-test              = "0.4.2"

[package]
name                    = "spack-rs"
description             = "Summon spack from rust build scripts!"
version                 = "0.0.1"
edition.workspace       = true
license                 = "(Apache-2.0 OR MIT)"
repository.workspace    = true
authors.workspace       = true

[lib]
name                    = "spack"

[dependencies]
async-stream.workspace  = true
async-trait.workspace   = true
base64ct                = { version = "1.6.0", features = ["alloc"] }
bindgen.workspace       = true
displaydoc.workspace    = true
eyre.workspace          = true
flate2                  = "1.0"
fslock                  = "0.2.1"
futures.workspace       = true
futures-core.workspace  = true
futures-lite.workspace  = true
futures-util.workspace  = true
guppy                   = "0.17.4"
hex                     = "0.4.3"
hex-literal             = "0.3.4"
indexmap                = { workspace = true, features = ["serde"] }
once_cell.workspace     = true
parking_lot.workspace   = true
regex                   = "1"
reqwest                 = "0.11.10"
serde                   = { version = "1.0.136", features = ["derive"] }
serde_json              = "1.0.79"
serde_yaml              = "0.8.23"
sha2                    = "0.10.8"
sha3                    = "0.10.8"
shlex                   = "1.1.0"
super-process.workspace = true
tar                     = "0.4"
tempfile.workspace      = true
thiserror.workspace     = true
tokio                   = { workspace = true, features = ["fs", "sync"] }
walkdir                 = "2"

[dev-dependencies]
tempdir                 = "0.3.7"
tokio-test.workspace    = true
tokio                   = { version = "1", features = ["full"] }

[workspace.lints.clippy]
len_without_is_empty    = "allow"
redundant_field_names   = "allow"
too_many_arguments      = "allow"
single_component_path_imports = "allow"
module_inception        = "allow"
match_ref_pats          = "allow"
expl_impl_clone_on_copy = "deny"
if_not_else             = "deny"
needless_continue       = "deny"
unseparated_literal_suffix = "deny"
used_underscore_binding = "deny"
collapsible_else_if     = "allow"
result_large_err        = "allow"

[lints]
workspace               = true
