[package]
name                    = "handles"
description             = "Type-erased strategies for sharing and cloning resources."
version                 = "0.0.1"
edition.workspace       = true
license                 = "Apache-2.0"
repository.workspace    = true
authors.workspace       = true

[dependencies]

[lints]
workspace               = true
