[package]
name                    = "hyperscan-async"
description             = "Async wrapper for the hyperscan C++ regex library."
version                 = "0.0.4"
edition.workspace       = true
license                 = "BSD-3-Clause"
repository.workspace    = true
authors.workspace       = true

[features]
default                 = ["static", "compile", "async", "alloc"]
static                  = ["hyperscan-async-sys/static"]
compile                 = ["hyperscan-async-sys/compile"]
dynamic                 = ["hyperscan-async-sys/dynamic"]
chimera                 = ["hyperscan-async-sys/chimera"]
async                   = []
# async                   = ["dep:futures-core", "dep:futures-util", "dep:tokio", "dep:tokio-stream"]
alloc                   = ["dep:parking_lot"]

[lib]
name                    = "hyperscan"

[dependencies]
hyperscan-async-sys.workspace = true

async-stream.workspace  = true
cfg-if                  = "1"
displaydoc.workspace    = true
futures-core.workspace  = true
# futures-core            = { workspace = true, optional = true }
futures-util.workspace  = true
# futures-util            = { workspace = true, optional = true }
indexmap.workspace      = true
itertools.workspace     = true
libc.workspace          = true
num_enum.workspace      = true
once_cell.workspace     = true
parking_lot             = { workspace = true, optional = true }
static_assertions.workspace = true
thiserror.workspace     = true
tokio                   = { workspace = true, features = ["rt", "sync", "io-util", "macros"] }
# tokio                   = { workspace = true, features = ["rt", "sync", "io-util", "macros"], optional = true }
tokio-stream            = "0.1.14"
# tokio-stream            = { version = "0.1.14", optional = true }

[dev-dependencies]
eyre.workspace          = true
tokio                   = { workspace = true, features = ["macros"] }
tokio-test.workspace    = true

[lints]
workspace               = true

[package.metadata.docs.rs]
all-features            = true
rustdoc-args            = ["--cfg", "docsrs"]
