[package]
name                    = "libpexl"
description             = "Wrapper for the libpexl C text matching and parsing library."
version                 = "0.0.1"
edition.workspace       = true
license                 = "BSD-3-Clause"
repository.workspace    = true
authors.workspace       = true

[lib]
name                    = "pexl"

[features]
default                 = ["dynamic"]
dynamic                 = ["libpexl-sys/dynamic"]
static                  = ["libpexl-sys/static"]

[dependencies]
libpexl-sys.workspace   = true

displaydoc.workspace    = true
num_enum.workspace      = true
thiserror.workspace     = true

[lints]
workspace               = true

[package.metadata.docs.rs]
all-features            = true
rustdoc-args            = ["--cfg", "docsrs"]
