[package]
name                    = "re2"
description             = "Wrapper for the re2 C++ regex library."
version                 = "0.0.0"
edition                 = "2021"
license                 = "BSD-3-Clause"
repository.workspace    = true
authors.workspace       = true

[package.metadata.spack]
env_label               = "re2-runtime-deps"
spec                    = "re2@2023-11-01+shared+pic ^ abseil-cpp+shared cxxstd=20"
cxx                     = "c++20"

[package.metadata.spack.bindgen]
process_comments        = true
header_path             = "src/c-bindings.hpp"
output_path             = "src/bindings.rs"

[package.metadata.spack.deps.re2]
type                    = "dynamic"
lib_names               = ["re2"]
allowlist               = ["re2::.*", "re2_c_bindings::.*"]

[package.metadata.spack.deps.abseil-cpp]
type                    = "dynamic"
lib_names               = [
  "absl_hash",
  "absl_low_level_hash",
  "absl_raw_hash_set",
  "absl_spinlock_wait",
  "absl_str_format_internal",
  "absl_strings",
  "absl_strings_internal",
  "absl_synchronization",
]
allowlist               = []

[build-dependencies]
cc                      = "1.0.83"
eyre.workspace          = true
spack.workspace         = true
tokio                   = { workspace = true, features = ["rt-multi-thread", "macros"] }

[dependencies]
displaydoc.workspace    = true
num_enum.workspace      = true
static_assertions.workspace = true
thiserror.workspace     = true
