[package]
name                    = "re2"
description             = "Wrapper for the re2 C++ regex library."
version                 = "0.0.9"
edition                 = "2021"
license                 = "BSD-3-Clause"
repository.workspace    = true
authors.workspace       = true

[features]
default                 = ["dynamic"]
dynamic                 = ["re2-sys/dynamic"]
static                  = ["re2-sys/static"]

[dependencies]
re2-sys.workspace       = true

displaydoc.workspace    = true
indexmap.workspace      = true
num_enum.workspace      = true
static_assertions.workspace = true
thiserror.workspace     = true
