[package]
name                    = "super-process"
description             = "An async process creation framework."
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
license                 = "GPL-3.0-or-later"
repository              = "https://github.com/cosmicexplorer/super-process"
version                 = "0.0.0"
edition                 = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process           = "1.3.0"
displaydoc.workspace    = true
futures-lite.workspace  = true
indexmap.workspace      = true
once_cell.workspace     = true
signal-hook             = "0.3.13"
tempfile.workspace      = true
thiserror.workspace     = true
tokio                   = { workspace = true, features = ["full"] }

[dev-dependencies]
tokio-test.workspace    = true
