[package]
name                    = "super-process"
description             = "An async process creation framework."
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
license                 = "Apache-2.0"
repository              = "https://github.com/cosmicexplorer/super-process"
version                 = "0.0.0"
edition                 = "2021"

[dependencies]
async-process           = "2.0.1"
async-trait.workspace   = true
displaydoc.workspace    = true
futures-lite.workspace  = true
indexmap.workspace      = true
once_cell.workspace     = true
signal-hook             = "0.3.13"
tempfile.workspace      = true
thiserror.workspace     = true

[dev-dependencies]
tokio-test.workspace    = true

[lints]
workspace               = true
