[package]
name                    = "super-process"
description             = "An async process creation framework."
version                 = "0.0.1"
edition.workspace       = true
license                 = "Apache-2.0"
repository.workspace    = true
authors.workspace       = true

[dependencies]
async-process           = "2.0.1"
async-trait.workspace   = true
displaydoc.workspace    = true
futures-lite.workspace  = true
indexmap.workspace      = true
once_cell.workspace     = true
signal-hook             = "0.3.13"
tempfile.workspace      = true
thiserror.workspace     = true

[dev-dependencies]
tokio-test.workspace    = true

[lints]
workspace               = true
