[package]
name                    = "abseil"
description             = "Wrapper for the abseil C++ library."
version                 = "0.0.0"
edition.workspace       = true
license                 = "BSD-3-Clause"
repository.workspace    = true
authors.workspace       = true

[package.metadata.spack]
env_label               = "re2-runtime-deps"
spec                    = "abseil-cpp+shared cxxstd=14"
cxx                     = "c++14"

[package.metadata.spack.bindgen]
header_path             = "src/abseil.hpp"
output_path             = "src/bindings.rs"

[package.metadata.spack.deps.abseil-cpp]
type                    = "dynamic"
# FIXME: this should depend on cargo features!
lib_names               = [
  "absl_hash",
  "absl_low_level_hash",
  "absl_raw_hash_set",
  "absl_spinlock_wait",
  "absl_str_format_internal",
  "absl_strings",
  "absl_strings_internal",
  "absl_synchronization",
]
allowlist               = ["absl::.*"]

[build-dependencies]
eyre.workspace          = true
spack.workspace         = true
tokio                   = { workspace = true, features = ["macros"] }
