[package]
name                    = "re2-sys"
description             = "Bindings to the compiled re2 C++ regex library."
version                 = "0.0.0"
edition.workspace       = true
license                 = "BSD-3-Clause"
repository.workspace    = true
authors.workspace       = true

[build-dependencies]
bindgen = "0.69.1"
spack = { path = "../.." }
